--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -45,7 +45,7 @@
 
       <div class='more-items containter' style= "display:none">
         <div class = "col-md-4">
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><button class = "btn btn-default"><%= @restaurantName[i] %> <span class="caret"></span></button></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @restaurantName[i] %> <span class="caret"></span></a>
           <ul class="dropdown-menu"><% @possibleItems.each do |item| %>
            <li class = "menu_item"><a><%= item[:name] %> : $<%= item[:price] %></a></li>
           <% end %>
