--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -12,6 +12,7 @@
   <% until @possibleItems.length > 0 do %>
     <% @response["objects"].sample(1).each do |place| %>
     <%
+      @places << place
       @placeLat << place["lat"]
       @placeLong << place["long"]
       @placeLocality << place["locality"]
@@ -41,12 +42,12 @@
 
 <!-- hidden spans holding data to be accessed via map.js -->
 
-  <span class="restaurantName"><%= @restaurantName[i] %></span>
-  <span class="latitude"><%= @placeLat[i] %></span>
-  <span class="longitude"><%= @placeLong[i] %></span>
-  <span class="postalCode"><%= @placeLocality[i] %></span>
-  <span class="phoneNumber"><%= @phoneNumber[i]%></span>
-  <span class="address"><%= @address[i]%></span>
+  <span class="restaurantName"><%= @places[i]["name"].upcase %></span>
+  <span class="latitude"><%= @places[i]["lat"] %></span>
+  <span class="longitude"><%= @places[i]["long"] %></span>
+  <span class="postalCode"><%= @places[i]["locality"] %></span>
+  <span class="phoneNumber"><%= @places[i]["phone"]%></span>
+  <span class="address"><%= @places[i]["street_address"]%></span>
 
 
       <div class='more-items containter' style= "display:none">
